# pc_control_tutorials

./: .gitignore
00_getting_started/01_installing_cmake/: README.md
00_getting_started/02_installing_git/: README.md
00_getting_started/03_installing_qt/: README.md
00_getting_started/04_configure_path/: README.md
00_getting_started/05_create_a_cpp_project/: README.md
01_boost/04_archive/: README.md
02_qt/01_timer/: README.md
02_qt/03_tcp/: README.md  README_tmp.html
02_qt/03_tcp/client/: CMakeLists.txt  README.md  client.cpp  client.h
02_qt/03_tcp/server/: CMakeLists.txt  README.md  main.cpp
03_python/03_tcp/: tcp_client.py  tcp_server.py
03_python/04_udp/: udp_client.py  udp_client_BIND.py  udp_multicasting_client.py  udp_multicasting_server.py  udp_server.py
04_labview/02_serial/: serial_demonstration.aliases  serial_demonstration.lvproj  serial_read_write.vi
django/: django.md
django/old/: 00_install_python.md
install_guides/: install_arduino.md  install_python.md  install_qt_creator.md  install_vs_code.md
pyside6/: 00_hello_world.py  00_template.py  01_hello_world.py  02_simple_button.py  03_simple_dialog.py  04_display_table.py  05_display_tree.py  06_main_A.py  06_main_B.py  07_style.py  README.md  mainwindow.ui  pyside6.md  style.qss  ui_mainwindow.py
python_serial/: arduino_serial.py  arduino_thread.py  python_serial.md  thread.py
qt_python_serial/: py_qt_serial.md  qt_python_serial.md
qt_python_tcp/: client.ui  client.ui.original  python_tcp.md  qt_python_tcp.md  server.ui  server.ui.original  tcp_client.py  tcp_server.py
(+67 files in other folders)
